--- a/src/pages/Regalitos/MetasUniverso/MetasUniverso.css
+++ b/src/pages/Regalitos/MetasUniverso/MetasUniverso.css
@@ -116,6 +116,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  touch-action: none;
 }
 .planeta-draggable:active {
   cursor: grabbing;
